Fix z-axis alignment dice & settings iOS

--- a/styles/dice.css
+++ b/styles/dice.css
@@ -13,8 +13,42 @@
   position: relative;
 }
 
+.active {
+
+  .face {
+    transform: translateZ(var(--dice-translate));
+
+    &.one {
+      transform: rotateX(-180deg) translateZ(var(--dice-translate));
+    }
+    
+    &.two {
+      transform: rotateY(90deg) translateZ(var(--dice-translate)) rotateZ(180deg);
+    }
+  
+    &.three {
+      transform: rotateX(-90deg) translateZ(var(--dice-translate)) rotateZ(-90deg);
+    }
+  
+    &.four {
+      transform: rotateY(-90deg) translateZ(var(--dice-translate));
+    }
+  
+    &.five {
+      transform: rotateX(90deg) translateZ(var(--dice-translate));
+    }
+  
+    &.six {
+      transform: rotateX(0deg) translateZ(var(--dice-translate));
+    }
+  }
+
+  .actions {
+    display: block;
+  }
+}
+
 .dice {
-  /* background-color: var(--color-light); */
   cursor: pointer;
   width: var(--dice-size);
   height: var(--dice-size);
@@ -22,6 +56,7 @@
   transform-style: preserve-3d;
   position: relative;
   transition: transform .5s linear;
+  margin-top: -10vh;
   
   &.spin {
     animation: spin 1s infinite linear;
@@ -69,31 +104,8 @@
   align-items: center;
   justify-content: center;
   font-size: 10em;
-  transform: translateZ(var(--dice-translate));
-
-  &.one {
-    transform: rotateX(-180deg) translateZ(var(--dice-translate));
-  }
-
-  &.two {
-    transform: rotateY(90deg) translateZ(var(--dice-translate)) rotateZ(180deg);
-  }
-
-  &.three {
-    transform: rotateX(-90deg) translateZ(var(--dice-translate)) rotateZ(-90deg);
-  }
-
-  &.four {
-    transform: rotateY(-90deg) translateZ(var(--dice-translate));
-  }
-
-  &.five {
-    transform: rotateX(90deg) translateZ(var(--dice-translate));
-  }
-
-  &.six {
-    transform: rotateX(0deg) translateZ(var(--dice-translate));
-  }
+  border: 1px solid var(--color-medium);
+  border-radius: 15px;
 }
 
 li {
@@ -103,10 +115,15 @@ li {
 .actions {
   position: absolute;
   bottom: 1em;
-  text-align: left;
   font-size: 3em;
-  
+  width: 80%;
+  display: none;
 }
+
+.actions ul {
+  padding: 0;
+}
+
 .actions.one ul li:nth-child(1) {
   display: block;
 }
